--- a/index.html
+++ b/index.html
@@ -106,10 +106,14 @@
 		
 		.project img {
 			background-color: #252525;
+			height:500px;
 		}
 		
 		.architecture {
 			background-color: #222;
+		}
+	    	.architecture {
+			height:500px;
 		}
 		
 		footer {
