--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 		
 		.project img {
 			background-color: #252525;
-			height:500px;
+			height:300px;
 		}
 		
 		.architecture {
 			background-color: #222;
 		}
-	    	.architecture {
-			height:500px;
+	    	.architecture img{
+			height:300px;
 		}
 		
 		footer {
